tests/ui/specialization/default-generic-associated-type-bound.stderr
error[E0277]: can't compare `T` with `T`
  --> $DIR/default-generic-associated-type-bound.rs:16:26
   |
LL |     default type U<'a> = &'a T;
   |                          ^^^^^ no implementation for `T == T`
   |
   = note: required for `&'a T` to implement `PartialEq`
note: required by a bound in `X::U`
  --> $DIR/default-generic-associated-type-bound.rs:6:17
   |
LL |     type U<'a>: PartialEq<&'a Self> where Self: 'a;
   |                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `X::U`
help: consider further restricting type parameter `T` with trait `PartialEq`
   |
LL | impl<T: 'static + std::cmp::PartialEq> X for T {
   |                 +++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
